<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danielortizagudelo.formulario.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        />




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loggin"
        android:textSize="18sp"
        />
    <EditText
        android:id="@+id/loggin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresar"/>



    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresar"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rpassword"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/Cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresar"/>





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresar"/>




        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sexo"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:onClick="onButton"/>
            <RadioButton
                android:id="@+id/femenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/femenino"
                android:onClick="onButton"/>

        </RadioGroup>





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nacimiento"
            android:textSize="20sp"
            />

    <Button
        android:id="@+id/pick_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:onClick="showDatePickerDialog" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:textSize="18sp"/>


    <Spinner
        android:id="@+id/ciudades"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </Spinner>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobbie"
        android:textSize="18sp"/>

<CheckBox
    android:id="@+id/hmusica"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/musica"
    android:onClick="onBox"/>

    <CheckBox
        android:id="@+id/hlectura"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/lectura"
        android:onClick="onBox"
        />

    <CheckBox
        android:id="@+id/hdeporte"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/deporte"
        android:onClick="onBox"
        />

    <CheckBox
        android:id="@+id/hviajes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/viajes"
        android:onClick="onBox"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"/>

    <TextView
        android:id="@+id/error1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/error2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/logginS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/passwordS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/eMailS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/sexoS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>


    <TextView
        android:id="@+id/dateS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/cityS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/hobbieS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/hobbieS1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/hobbieS2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/hobbieS3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>



</LinearLayout>

</ScrollView>
